# falcon-api-browse

./: README.rst  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
examples/: example_01.py
falcon_api_browse/: __init__.py  middleware.py  views.py
falcon_api_browse/templates/: base.html
