[tool.poetry]
name = "falcon-api-browse"
version = "0.1.0"
description = "Middleware for Falcon web framework to browse JSON API in HTML"
authors = ["Abhilash Raj <raj.abhilash1@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7"
falcon = ">=3.0.0"
Jinja2 = ">=2.0.0"
importlib-resources = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
